# superdev-assignment

./: Cargo.toml
src/: main.rs
src/handlers/: get_health.rs  keypair.rs  mod.rs
src/handlers/message/: mod.rs  sign.rs  verify.rs
src/handlers/send/: mod.rs  sol.rs
src/handlers/token/: create.rs  mint.rs  mod.rs  transfer.rs
src/types/: app_state.rs  mod.rs
