[package]
name = "superdev-assigment"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shuttle-actix-web = "0.55"
shuttle-runtime = "0.55"
tokio = "1"
solana-account-decoder = "2.3.2"
solana-client = "2.3.2"
solana-sdk = "2.3.1"
spl-token = "8.0.0"
spl-token-2022 = "9.0.0"
base64 = "0.22.1"
